--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <li><a href="">Clients</a></li>
               <li><a href="">Services</a></li>
               <li><a href="">Portfolio</a></li>
-              <li><a href="">Contact Us</a></li>
+              <li><a href="">Contact</a></li>
             </ul>
           </div>
         </div>
